add_executable(insert insert.cpp)
add_executable(search searchRange.cpp)
add_executable(sqrt sqrt.cpp)
add_executable(isPerfectSquare isPerfectSquare.cpp)
add_executable(removeDuplicates removeDuplicates.cpp)
add_executable(sortedSquares sortedSquares.cpp)
add_executable(minSubArrayLen minSubArrayLen.cpp)
add_executable(generateMatrix generateMatrix.cpp)
add_executable(ZoomSum ZoomSum.cpp)
add_executable(LandZoning LandZoning.cpp)