add_subdirectory(homework1)
add_subdirectory(homework2)
add_subdirectory(homework3)
add_subdirectory(homework4)
add_subdirectory(homework5)
add_subdirectory(homework6)
add_subdirectory(homework7)
add_subdirectory(homework8)
add_subdirectory(homework9)
add_subdirectory(homework10)
add_subdirectory(homework11)