add_executable(path path.cpp)
add_executable(islandCnt1 islandCnt1.cpp)
add_executable(islandS islandS.cpp)
add_executable(islandD islandD.cpp)
add_executable(islandW islandW.cpp)
add_executable(maxIsland maxIsland.cpp)
add_executable(islandC islandC.cpp)
add_executable(jump3 jump3.cpp)
add_executable(getAncestors getAncestors.cpp)
add_executable(watchedVideosByFriends watchedVideosByFriends.cpp)